[gd_scene load_steps=26 format=3 uid="uid://c75tx2d3gdqv"]

[ext_resource type="Script" uid="uid://bv11yvouya8jo" path="res://scripts/world.gd" id="1_co7eg"]
[ext_resource type="PackedScene" uid="uid://doip7nd4nlelu" path="res://scenes/npc_passenger.tscn" id="2_50cfg"]
[ext_resource type="PackedScene" uid="uid://glnxtypxtao4" path="res://scenes/non_interactable/absperrband.tscn" id="3_rycwc"]
[ext_resource type="PackedScene" uid="uid://d1wjdftfy8pox" path="res://scenes/non_interactable/anzeigetafel.tscn" id="4_q0yci"]
[ext_resource type="PackedScene" uid="uid://cxh5m46y8xhhl" path="res://scenes/hgscan.tscn" id="6_7ucro"]
[ext_resource type="PackedScene" uid="uid://d2fxem1o4nt1d" path="res://scenes/koerperscanner.tscn" id="7_ff81o"]
[ext_resource type="PackedScene" uid="uid://bwkjlr4cxb47f" path="res://scenes/polizei.tscn" id="8_1u3fv"]
[ext_resource type="PackedScene" uid="uid://b46qodkewow64" path="res://scenes/schalter.tscn" id="9_e63ap"]
[ext_resource type="PackedScene" uid="uid://cv1hqkjg6j8cf" path="res://scenes/non_interactable/flughafen.tscn" id="10_1173x"]
[ext_resource type="PackedScene" uid="uid://cu46g1yonmqgj" path="res://scenes/gate_counter.tscn" id="11_qeqct"]
[ext_resource type="PackedScene" uid="uid://bkysb3i7pilml" path="res://scenes/man_check.tscn" id="12_70uel"]
[ext_resource type="PackedScene" uid="uid://delo5q0n555nk" path="res://scenes/waage.tscn" id="12_rsa7g"]
[ext_resource type="PackedScene" uid="uid://ccfg6nqd46qke" path="res://scenes/hand_luggage.tscn" id="14_rwo20"]
[ext_resource type="PackedScene" uid="uid://dq830aithh3p" path="res://scenes/non_interactable/waiting_chair.tscn" id="15_hiqwa"]
[ext_resource type="PackedScene" uid="uid://b3vunkpxkns06" path="res://scenes/suitcase.tscn" id="15_n6nrx"]
[ext_resource type="PackedScene" uid="uid://c6jcnjk4rypdo" path="res://scenes/fließband.tscn" id="16_2u3nc"]
[ext_resource type="PackedScene" uid="uid://ulfxpk6sb8kq" path="res://scenes/non_interactable/trennwand.tscn" id="17_cbp6q"]
[ext_resource type="PackedScene" uid="uid://dwvbogi3sgxgq" path="res://scenes/towing_truck.tscn" id="17_udxuc"]
[ext_resource type="PackedScene" uid="uid://15irtmjhthl3" path="res://scenes/plane.tscn" id="18_ikiii"]
[ext_resource type="PackedScene" uid="uid://cx4n3w63q30li" path="res://scenes/staircase.tscn" id="20_26xuy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tbeoq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_524yn"]
sky_material = SubResource("ProceduralSkyMaterial_tbeoq")

[sub_resource type="Environment" id="Environment_qymvr"]
background_mode = 2
sky = SubResource("Sky_524yn")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_5phd0"]
size = Vector2(200, 200)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_otds2"]
data = PackedVector3Array(100, 0, 100, -100, 0, 100, 100, 0, -100, -100, 0, 100, -100, 0, -100, 100, 0, -100)

[node name="world" type="Node3D"]
script = ExtResource("1_co7eg")
npc_passenger_scene = ExtResource("2_50cfg")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qymvr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, -24.8449, 5.24214, 25.4377)
shadow_enabled = true

[node name="Boden" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_5phd0")

[node name="StaticBody3D" type="StaticBody3D" parent="Boden"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boden/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_otds2")

[node name="anzeigetafel" parent="." instance=ExtResource("4_q0yci")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -36.6606, 1, 62.0542)

[node name="polizei" parent="." instance=ExtResource("8_1u3fv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, 37)

[node name="flughafen" parent="." instance=ExtResource("10_1173x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -2, 45)

[node name="hand_luggage" parent="." instance=ExtResource("14_rwo20")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.8233, 0, 62.748)

[node name="suitcase" parent="." instance=ExtResource("15_n6nrx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.1522, 0, 65.7828)

[node name="customer_path" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -18.9345, 0, 55.8431)

[node name="job_positions" type="Node3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -34.5358)

[node name="airport_worker" type="Node3D" parent="customer_path/job_positions"]

[node name="hgscan" type="Marker3D" parent="customer_path/job_positions/airport_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.28483, 0, 49.6213)

[node name="bodyscan" type="Marker3D" parent="customer_path/job_positions/airport_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.4436, 0, 57.8117)

[node name="man_check" type="Marker3D" parent="customer_path/job_positions/airport_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.01512, 0, 61.76)

[node name="loading" type="Marker3D" parent="customer_path/job_positions/airport_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.1347, 0, 59.4308)

[node name="unloading" type="Marker3D" parent="customer_path/job_positions/airport_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.1636, 0, 98.1924)

[node name="airline_worker" type="Node3D" parent="customer_path/job_positions"]

[node name="schalter" type="Marker3D" parent="customer_path/job_positions/airline_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.5601, 4.76837e-07, 43.1652)

[node name="gate" type="Marker3D" parent="customer_path/job_positions/airline_worker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.8487, 0, 74.2875)

[node name="Marker3D" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.1882, 0, -3.01138)

[node name="Marker3D2" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.33304, 0, -2.98721)

[node name="Marker3D3" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.24089, 0, -0.0938377)

[node name="Marker3D4" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0278, 0, -0.00812912)

[node name="schalter" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9834, 0, 5.0024)

[node name="Marker3D5" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.03355, 0, 5.04851)

[node name="hgscan" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.76895, 1.90735e-06, 10.8553)

[node name="Marker3D6" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.41948, 0, 8.15041)

[node name="Marker3D7" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.4477, 0, 8.29832)

[node name="bodyscan" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9278, 0, 18.7271)

[node name="Marker3D8" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.48, 0, 23.4023)

[node name="Marker3D9" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.26803, 1.90735e-06, 25.6361)

[node name="gate" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.522, 0, 32.3349)

[node name="spawn" type="Marker3D" parent="customer_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9488, 0, -11.4776)

[node name="truck_path" type="Node3D" parent="."]

[node name="transport_01" type="Marker3D" parent="truck_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.4191, 0, -8.86369)

[node name="transport_02" type="Marker3D" parent="truck_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48.618, 0, -11.5243)

[node name="transport_03" type="Marker3D" parent="truck_path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.9088, 0, -10.9113)

[node name="sec_check" type="Node3D" parent="."]

[node name="koerperscanner" parent="sec_check" instance=ExtResource("7_ff81o")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.10683, 0, 34.9766)

[node name="hgscan" parent="sec_check" instance=ExtResource("6_7ucro")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -10.4377, 0, 42.5861)

[node name="man_check" parent="sec_check" instance=ExtResource("12_70uel")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -12.7858, -3.8147e-06, 27.9862)

[node name="hgscan2" parent="sec_check" instance=ExtResource("6_7ucro")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.72192, 0, 42.5861)

[node name="koerperscanner2" parent="sec_check" instance=ExtResource("7_ff81o")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.31423, 0, 34.9766)

[node name="schalter_all" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -43.9782, -1.90735e-06, 92.0301)

[node name="schalter1" type="Node3D" parent="schalter_all"]

[node name="schalter" parent="schalter_all/schalter1" instance=ExtResource("9_e63ap")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.14987, 0, 43.6964)

[node name="absperrbänder" type="Node3D" parent="schalter_all/schalter1"]

[node name="schalter" type="Node3D" parent="schalter_all/schalter1/absperrbänder"]

[node name="absperrband" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.264, 0, 40)

[node name="absperrband2" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.95745, 0, 40)

[node name="absperrband3" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.63275, 0, 37.3161)

[node name="absperrband4" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25183, 0, 37.3287)

[node name="absperrband12" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25183, 0, 34.6202)

[node name="absperrband5" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.93523, 0, 34.6453)

[node name="absperrband6" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.61863, 0, 34.6453)

[node name="absperrband7" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3271, 0, 37.3161)

[node name="absperrband8" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.3271, 0, 37.3161)

[node name="absperrband9" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.3271, 0, 34.6453)

[node name="absperrband10" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3271, 0, 31.9744)

[node name="absperrband11" parent="schalter_all/schalter1/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.64371, 0, 31.9744)

[node name="schalter2" type="Node3D" parent="schalter_all"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.83168, 0, -7.62939e-06)

[node name="schalter" parent="schalter_all/schalter2" instance=ExtResource("9_e63ap")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.14987, 0, 43.6964)

[node name="absperrbänder" type="Node3D" parent="schalter_all/schalter2"]

[node name="schalter" type="Node3D" parent="schalter_all/schalter2/absperrbänder"]

[node name="absperrband" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.264, 0, 40)

[node name="absperrband2" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.95745, 0, 40)

[node name="absperrband3" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.63275, 0, 37.3161)

[node name="absperrband4" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25183, 0, 37.3287)

[node name="absperrband12" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25183, 0, 34.6202)

[node name="absperrband5" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.93523, 0, 34.6453)

[node name="absperrband6" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.61863, 0, 34.6453)

[node name="absperrband7" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3271, 0, 37.3161)

[node name="absperrband8" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.3271, 0, 37.3161)

[node name="absperrband9" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.3271, 0, 34.6453)

[node name="absperrband10" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3271, 0, 31.9744)

[node name="absperrband11" parent="schalter_all/schalter2/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.64371, 0, 31.9744)

[node name="schalter3" type="Node3D" parent="schalter_all"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.6634, 0, -2.28882e-05)

[node name="schalter" parent="schalter_all/schalter3" instance=ExtResource("9_e63ap")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.14987, 0, 43.6964)

[node name="absperrbänder" type="Node3D" parent="schalter_all/schalter3"]

[node name="schalter" type="Node3D" parent="schalter_all/schalter3/absperrbänder"]

[node name="absperrband" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.264, 0, 40)

[node name="absperrband2" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.95745, 0, 40)

[node name="absperrband3" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.63275, 0, 37.3161)

[node name="absperrband4" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25183, 0, 37.3287)

[node name="absperrband12" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.25183, 0, 34.6202)

[node name="absperrband5" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.93523, 0, 34.6453)

[node name="absperrband6" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.61863, 0, 34.6453)

[node name="absperrband7" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3271, 0, 37.3161)

[node name="absperrband8" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.3271, 0, 37.3161)

[node name="absperrband9" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12.3271, 0, 34.6453)

[node name="absperrband10" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3271, 0, 31.9744)

[node name="absperrband11" parent="schalter_all/schalter3/absperrbänder/schalter" instance=ExtResource("3_rycwc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.64371, 0, 31.9744)

[node name="waage" parent="schalter_all" instance=ExtResource("12_rsa7g")]
transform = Transform3D(-0.4, 0, 3.49691e-08, 0, 0.4, 0, -3.49691e-08, 0, -0.4, -18.9324, 1.90735e-06, 52.665)

[node name="fließband2" parent="." instance=ExtResource("16_2u3nc")]
transform = Transform3D(-0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, -28.0641, 0, 46.2603)

[node name="towing_truck" parent="." instance=ExtResource("17_udxuc")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, -36.6411, 0.0958791, 31.7916)

[node name="plane" parent="." instance=ExtResource("18_ikiii")]
transform = Transform3D(-0.9, 0, -7.86805e-08, 0, 0.9, 0, 7.86805e-08, 0, -0.9, -25.2432, 0, -23.8307)

[node name="walls" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.9711, 0, 36.0656)

[node name="trennwand" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, 9.4807)

[node name="trennwand2" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, 5.71706)

[node name="trennwand3" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, 1.95539)

[node name="trennwand4" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, -1.81121)

[node name="trennwand5" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, -5.5694)

[node name="trennwand6" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, -9.33078)

[node name="trennwand7" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, -13.086)

[node name="trennwand8" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.2208, 4.76837e-07, -16.8754)

[node name="trennwand9" parent="walls" instance=ExtResource("17_cbp6q")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.22319, -0.0938544, -20.6523)

[node name="gate" type="Node3D" parent="."]

[node name="benches" type="Node3D" parent="gate"]

[node name="bench" parent="gate/benches" instance=ExtResource("15_hiqwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2909, 0, 31.1736)

[node name="gate_counter" parent="gate" instance=ExtResource("11_qeqct")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 4.52484, 1.90735e-06, 17.9597)

[node name="passenger_spawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31, 0, 68)

[node name="Sketchfab_Scene" parent="." instance=ExtResource("20_26xuy")]
transform = Transform3D(0.6857, 0, -0.140767, 0, 0.7, 0, 0.140767, 0, 0.6857, -19.2987, 9.99563e-07, -2.72258)
